<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Maserati keypad</string>
    <string name="keyboard_layouts_label">Droid 4 keypad</string>
    <string name="keypad_maserati_qwerty_label">Maserati QWERTY</string>
    <string name="keypad_maserati_qwertz_label">Maserati QWERTZ</string>
    <string name="keypad_maserati_czech_qwerty_label">Maserati Czech QWERTY</string>
    <string name="keypad_maserati_czech_qwertz_label">Maserati Czech QWERTZ</string>
    <string name="keypad_maserati_cro_qwerty_label">Maserati Croatian QWERTY</string>
    <string name="keypad_maserati_cro_qwertz_label">Maserati Croatian QWERTZ</string>
</resources>
