<?xml version="1.0" encoding="utf-8"?>
<keyboard-layouts xmlns:android="http://schemas.android.com/apk/res/android">
    <keyboard-layout android:name="keypad_maserati_qwerty"
            android:label="@string/keypad_maserati_qwerty_label"
            android:keyboardLayout="@raw/keypad_maserati_qwerty" />

    <keyboard-layout android:name="keypad_maserati_qwertz"
            android:label="@string/keypad_maserati_qwertz_label"
            android:keyboardLayout="@raw/keypad_maserati_qwertz" />

    <keyboard-layout android:name="keypad_maserati_czech_qwerty"
            android:label="@string/keypad_maserati_czech_qwerty_label"
            android:keyboardLayout="@raw/keypad_maserati_czech_qwerty" />

    <keyboard-layout android:name="keypad_maserati_czech_qwertz"
            android:label="@string/keypad_maserati_czech_qwertz_label"
            android:keyboardLayout="@raw/keypad_maserati_czech_qwertz" />

    <keyboard-layout android:name="keypad_maserati_cro_qwerty"
            android:label="@string/keypad_maserati_cro_qwerty_label"
            android:keyboardLayout="@raw/keypad_maserati_cro_qwerty" />

    <keyboard-layout android:name="keypad_maserati_cro_qwertz"
            android:label="@string/keypad_maserati_cro_qwertz_label"
            android:keyboardLayout="@raw/keypad_maserati_cro_qwertz" />
</keyboard-layouts>
